fix aly tag on 30th

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6459">
-	<link rel="stylesheet" type="text/css" href="style.css?1408">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?9905">
+	<link rel="stylesheet" type="text/css" href="style.css?2046">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,800,40&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Home</title>
@@ -169,7 +169,7 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc tc-7781 l-bloc " id="bloc-2">
+<div class="bloc tc-7781 l-bloc" id="bloc-2">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col">
@@ -236,7 +236,7 @@
 			</div>
 			<div class="col-lg-3 col-md-6 align-self-center">
 				<div class="card">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1758567607538%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/1758567607538%20copy.png" class="img-fluid mx-auto lazyload" alt="panel  7/12/23" width="268" height="268"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/1758567607538%20copy.webp"><img src="img/lazyload-ph.png" data-src="img/1758567607538%20copy.png" class="img-fluid mx-auto lazyload " alt="Bigyan Acharya" width="268" height="268"></picture>
 					<div class="card-body">
 						<p class="text-lg-center text-center p-1-style">
 							<strong>Bigyan Acharya</strong><br>Getting an internship&nbsp;<br>Cisco Meraki<br><strong>30/10/2025</strong><br>
@@ -363,9 +363,9 @@
 
 
 <!-- Additional JS -->
-<script src="./js/jquery.min.js?3499"></script>
-<script src="./js/bootstrap.bundle.min.js?2148"></script>
-<script src="./js/blocs.min.js?2886"></script>
+<script src="./js/jquery.min.js?860"></script>
+<script src="./js/bootstrap.bundle.min.js?2615"></script>
+<script src="./js/blocs.min.js?5764"></script>
 <script src="./js/lazysizes.min.js" defer></script><!-- Additional JS END -->
 
 
